[package]
name = "r_mutex-watersheds"
version = "0.1.0"
authors = ["Philipp Hanslovsky <philipp.hanslovsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disjoint-sets = "0.4.2"

[lib]
test = true
# no benchmarks set up
bench = false
crate-type = ["lib"]

