[package]
name = "r_mutex-watersheds"
version = "0.1.0"
authors = ["Philipp Hanslovsky <philipp.hanslovsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disjoint-sets = "0.4.2"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"

[lib]
test = true
# no benchmarks set up
bench = false
crate-type = ["lib"]

